# jz-launcher

./: .gitignore  COPYING  Cargo.toml  INSTALL  README.md
launcher-core/: Cargo.toml
launcher-core/examples/launcher_cli/: launcher.rs  main.rs
launcher-core/src/: app_loader.rs  app_runner.rs  app_usage.rs  env.rs  lib.rs  model.rs  search_engine.rs  str_util.rs
launcher-core/tests/: base_code_test.rs  desktop_test.rs  integration_test.rs
launcher-gui/: Cargo.toml  build.rs
launcher-gui/examples/launcher_ui_v0_1/: main.rs  mock_data.rs  style.css
launcher-gui/examples/launcher_ui_v0_2/: main.rs  mock_data.rs  style.css
launcher-gui/examples/launcher_ui_v0_2/app_data_object/: imp.rs  mod.rs
launcher-gui/examples/launcher_ui_v0_2/search_result_item/: imp.rs  mod.rs
launcher-gui/examples/launcher_ui_v0_3/: main.rs
launcher-gui/examples/launcher_ui_v0_4/: main.rs
launcher-gui/examples/launcher_with_tray/: main.rs
launcher-gui/examples/settings_ui/: config.rs  main.rs  mock_config.json  style.css
launcher-gui/examples/window_toggle_demo/: main.rs
launcher-gui/resources/: jz-launcher.desktop  resources.gresource.xml
launcher-gui/resources/css/: launcher.css  settings.css  style.css
launcher-gui/resources/ui/: launcher-window.ui  search-result-item.ui  settings-window.ui  window.ui
launcher-gui/src/: app_provider.rs  global_constant.rs  main.rs  mock.rs  system_env.rs
launcher-gui/src/app_data_object/: imp.rs  mod.rs
launcher-gui/src/config_data_object/: config_data.rs  imp.rs  mod.rs
launcher-gui/src/launcher_window/: app_provider.rs  imp.rs  mod.rs
launcher-gui/src/search_result_item/: imp.rs  mod.rs
launcher-gui/src/settings_window/: imp.rs  mod.rs
launcher-gui/src/window/: imp.rs  mod.rs
launcher-gui/tests/: desktop_env_property_test.rs
scripts/: package-source.sh
