[workspace]
members = [
    "launcher-core",
    "launcher-gui",
]

resolver = "2"

# 默认打包成员
default-members = ["launcher-gui"]

# Release 模式优化
[profile.release]
opt-level = "z"        # 优化大小
lto = true             # 链接时优化
codegen-units = 1      # 单个代码生成单元
strip = true           # 剥离调试符号
panic = "abort"        # 减少展开代码大小