[package]
name = "launcher-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.11.4", package = "gtk4", features = ["v4_22"] }
glib = "0.22.8"
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_9"] }
serde = {version = "1.0.228",features = ["derive"]}
serde_json = "1.0.150"

[build-dependencies]
glib-build-tools = "0.22.8"

[[example]]
name = "launcher_ui_v0_1"
path = "examples/launcher_ui_v0_1/main.rs"

[[example]]
name = "launcher_ui_v0_2"
path = "examples/launcher_ui_v0_2/main.rs"

[[example]]
name = "settings_ui"
path = "examples/settings_ui/main.rs"

