[package]
name = "launcher-gui"
version = "1.0.0"
edition = "2024"
description = "Linux Desktop Launcher"
license = "MIT"
authors = ["Zhou Jing <helloworldzhoujing@163.com>"]
#documentation = "暂无文档页"
homepage = "https://github.com/zhoujing2023/jz-launcher"
repository = "https://github.com/zhoujing2023/jz-launcher"

[dependencies]
launcher-core = {path = "../launcher-core",version = "1.0.0"}
gtk = { version = "0.11.4", package = "gtk4", features = ["v4_22"] }
glib = "0.22.8"
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_9"] }
serde = {version = "1.0.228",features = ["derive"]}
serde_json = "1.0.150"
dirs = "6.0.0"

[build-dependencies]
glib-build-tools = "0.22.8"

[[example]]
name = "launcher_ui_v0_1"
path = "examples/launcher_ui_v0_1/main.rs"

[[example]]
name = "launcher_ui_v0_2"
path = "examples/launcher_ui_v0_2/main.rs"

[[example]]
name = "launcher_ui_v0_3"
path = "examples/launcher_ui_v0_3/main.rs"

[[example]]
name = "launcher_ui_v0_4"
path = "examples/launcher_ui_v0_4/main.rs"

[[example]]
name = "window_toggle_demo"
path = "examples/window_toggle_demo/main.rs"

[[example]]
name = "settings_ui"
path = "examples/settings_ui/main.rs"


# 指定二进制文件名（可选）
[[bin]]
name = "jz-launcher"
path = "src/main.rs"

# Deb 打包配置
# 打包指令：cargo deb
[package.metadata.deb]
name = "jz-launcher"
maintainer = "Zhou Jing <helloworldzhoujing@163.com>"
depends = "libgtk-4-1, libadwaita-1-0, libglib2.0-0"

# 手动包含二进制文件
[[package.metadata.deb.assets]]
source = "../target/release/jz-launcher"
dest = "/usr/bin/jz-launcher"
mode = "755"

# 图标
[[package.metadata.deb.assets]]
source = "resources/icon/jz-launcher.svg"
dest = "/usr/share/icons/hicolor/scalable/apps/jz-launcher.svg"
mode = "644"

# .desktop 文件
[[package.metadata.deb.assets]]
source = "resources/jz-launcher.desktop"
dest = "/usr/share/applications/jz-launcher.desktop"
mode = "644"

# RPM 打包配置（cargo-generate-rpm）
# 打包指令
# cargo build --release -p launcher-gui
# cargo generate-rpm -p launcher-gui
[package.metadata.generate-rpm]
name = "jz-launcher"
release = "1"
assets = [
    { source = "../target/release/jz-launcher", dest = "/usr/bin/jz-launcher", mode = "755" },
    { source = "resources/icon/jz-launcher.svg", dest = "/usr/share/icons/hicolor/scalable/apps/jz-launcher.svg", mode = "644" },
    { source = "resources/jz-launcher.desktop", dest = "/usr/share/applications/jz-launcher.desktop", mode = "644" },
]

# Fedora/RHEL 系发行版的运行时包名
[package.metadata.generate-rpm.requires]
gtk4 = "*"
libadwaita = "*"
glib2 = "*"

# AppImage 打包配置
# 打包指令
# cd launcher-gui
# cargo packager --release
# 不能直接双击运行，需要通过指令在AppImage后面加 -- --toggle 参数。如：……/jz-launcher_0.1.0_x86_64.AppImage -- --toggle
[package.metadata.packager]
product-name = "JzLauncher"
identifier = "org.zhoujing.jz-launcher"
formats = ["appimage"]
before-packaging-command = "cargo build --release -p launcher-gui"
icons = ["resources/icon/jz-launcher.png"]
out-dir = "../target/packages"
binaries-dir = "../target/release"

[[package.metadata.packager.binaries]]
path = "jz-launcher"
main = true
